--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,6 +64,8 @@
 					<a href="/vote"><button class="home-vote-btn">投票する</button></a>
 				<% } %>
 				
+				<!-- 現在の投票数 -->
+				<a href="/now_voting"><button class="home-election-result">得票数を見る</button></a>
 				<!-- 前回の投票結果 -->
 				<a href="/result"><button class="home-election-result">前回の投票結果を見る</button></a>
 			</div>
