--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -20,7 +20,7 @@
       <div class="vote-select-movie-container">
         <div>
           <img src="/movies/mov1.png">
-          <input type="checkbox" name="movie" value="1">
+          <span><input type="checkbox" name="movie" value="1"></span>
         </div>
   
         <div>
