--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -20,9 +20,30 @@
         <p class="mypage-user-name"><%= locals.username %></p>
       </div>
       <div class="mypage-second-container">
-        <p>2020/12/15</p>
-        <p>ターミナル</p>
-        <p class="mypage-reserve-time">21:00</p>
+        <% if(reserve[0] == null) { %>
+          <p>予約なし</p>
+        <% } else { %>
+          <% 
+            let months = {
+              Jan: "1", 
+              Feb: "2", 
+              Mar: "3",
+              Apr: "4", 
+              May: "5", 
+              Jun: "6", 
+              Jul: "7",
+              Aug: "8",
+              Sep: "9",
+              Oct: "10",
+              Nov: "11",
+              Dec: "12"
+            };
+            let time_box = String(reserve[0].start).split(' '); 
+          %>
+          <p><%= time_box[3] %>/<%= months[time_box[1]] %>/<%= time_box[2] %></p>
+          <p><%= reserve[0].title %></p>
+          <p class="mypage-reserve-time"><%= String(time_box[4]).slice(0, -3) %></p>
+        <% } %>
       </div>
     </div>
     <div class="mypage-list-wrapper">
