--- a/views/reserve_two.ejs
+++ b/views/reserve_two.ejs
@@ -17,11 +17,36 @@
     <div class="reserve-two-movieinfo-wrapper">
       <div class="reserve-two-movieinfo-one-wrapper">
         <p>作品</p>
-        <p>ターミナル</p>
+        <p><%= movieinfo[0].title %></p>
       </div>
       <div class="reserve-two-movieinfo-two-wrapper">
         <p>日時</p>
-        <p>2020/12/15(火)21:00-</p>
+        <% let months = {
+            Jan: "1", 
+            Feb: "2", 
+            Mar: "3",
+            Apr: "4", 
+            May: "5", 
+            Jun: "6", 
+            Jul: "7",
+            Aug: "8",
+            Sep: "9",
+            Oct: "10",
+            Nov: "11",
+            Dec: "12"
+          };
+          let weeks = {
+            Mon: "月", 
+            Tue: "火", 
+            Wed: "水",
+            Thu: "木", 
+            Fri: "金", 
+            Sat: "土", 
+            Sun: "日"
+          };
+          let time_box = String(movieinfo[0].start).split(' '); 
+        %> 
+        <p><%= time_box[3] %>/<%= months[time_box[1]] %>/<%= time_box[2] %>(<%= weeks[time_box[0]] %>)<%= String(time_box[4]).slice(0, -3) %>-</p>
       </div>   
     </div>
 
@@ -66,53 +91,53 @@
         <div class="reserve-two-seats-wrapper">
           <div class="reserve-two-line-wrapper">
             <p>A</p>
-            <input type="checkbox" name="seat" value="1, A-1">
-            <input type="checkbox" name="seat" value="2, A-2">
-            <input type="checkbox" name="seat" value="3, A-3">
-            <input type="checkbox" name="seat" value="4, A-4">
-            <input type="checkbox" name="seat" value="5, A-5">
-            <input type="checkbox" name="seat" value="6, A-6">
-            <input type="checkbox" name="seat" value="7, A-7">
-            <input type="checkbox" name="seat" value="8, A-8">
+            <span><input type="checkbox" name="seat" value="1, A-1"></span>
+            <span><input type="checkbox" name="seat" value="2, A-2"></span>
+            <span><input type="checkbox" name="seat" value="3, A-3"></span>
+            <span><input type="checkbox" name="seat" value="4, A-4"></span>
+            <span><input type="checkbox" name="seat" value="5, A-5"></span>
+            <span><input type="checkbox" name="seat" value="6, A-6"></span>
+            <span><input type="checkbox" name="seat" value="7, A-7"></span>
+            <span><input type="checkbox" name="seat" value="8, A-8"></span>
             <p>A</p>
           </div>
 
           <div class="reserve-two-line-wrapper">
             <p>B</p>
-            <input type="checkbox" name="seat" value="9, B-1">
-            <input type="checkbox" name="seat" value="10, B-2">
-            <input type="checkbox" name="seat" value="11, B-3">
-            <input type="checkbox" name="seat" value="12, B-4">
-            <input type="checkbox" name="seat" value="13, B-5">
-            <input type="checkbox" name="seat" value="14, B-6">
-            <input type="checkbox" name="seat" value="15, B-7">
-            <input type="checkbox" name="seat" value="16, B-8">
+            <span><input type="checkbox" name="seat" value="9, B-1"></span>
+            <span><input type="checkbox" name="seat" value="10, B-2"></span>
+            <span><input type="checkbox" name="seat" value="11, B-3"></span>
+            <span><input type="checkbox" name="seat" value="12, B-4"></span>
+            <span><input type="checkbox" name="seat" value="13, B-5"></span>
+            <span><input type="checkbox" name="seat" value="14, B-6"></span>
+            <span><input type="checkbox" name="seat" value="15, B-7"></span>
+            <span><input type="checkbox" name="seat" value="16, B-8"></span>
             <p>B</p>
           </div>
 
           <div class="reserve-two-line-wrapper">
             <p>C</p>
-            <input type="checkbox" name="seat" value="17, C-1">
-            <input type="checkbox" name="seat" value="18, C-2">
-            <input type="checkbox" name="seat" value="19, C-3">
-            <input type="checkbox" name="seat" value="20, C-4">
-            <input type="checkbox" name="seat" value="21, C-5">
-            <input type="checkbox" name="seat" value="22, C-6">
-            <input type="checkbox" name="seat" value="23, C-7">
-            <input type="checkbox" name="seat" value="24, C-8">
+            <span><input type="checkbox" name="seat" value="17, C-1"></span>
+            <span><input type="checkbox" name="seat" value="18, C-2"></span>
+            <span><input type="checkbox" name="seat" value="19, C-3"></span>
+            <span><input type="checkbox" name="seat" value="20, C-4"></span>
+            <span><input type="checkbox" name="seat" value="21, C-5"></span>
+            <span><input type="checkbox" name="seat" value="22, C-6"></span>
+            <span><input type="checkbox" name="seat" value="23, C-7"></span>
+            <span><input type="checkbox" name="seat" value="24, C-8"></span>
             <p>C</p>
           </div>
 
           <div class="reserve-two-line-wrapper">
             <p>D</p>
-            <input type="checkbox" name="seat" value="25, D-1">
-            <input type="checkbox" name="seat" value="26, D-2">
-            <input type="checkbox" name="seat" value="27, D-3">
-            <input type="checkbox" name="seat" value="28, D-4">
-            <input type="checkbox" name="seat" value="29, D-5">
-            <input type="checkbox" name="seat" value="30, D-6">
-            <input type="checkbox" name="seat" value="31, D-7">
-            <input type="checkbox" name="seat" value="32, D-8">
+            <span><input type="checkbox" name="seat" value="25, D-1"></span>
+            <span><input type="checkbox" name="seat" value="26, D-2"></span>
+            <span><input type="checkbox" name="seat" value="27, D-3"></span>
+            <span><input type="checkbox" name="seat" value="28, D-4"></span>
+            <span><input type="checkbox" name="seat" value="29, D-5"></span>
+            <span><input type="checkbox" name="seat" value="30, D-6"></span>
+            <span><input type="checkbox" name="seat" value="31, D-7"></span>
+            <span><input type="checkbox" name="seat" value="32, D-8"></span>
             <p>D</p>
           </div>
         </div>
